--- a/Phoenix3D/PX2Extends/PX2Extends.vcxproj.filters
+++ b/Phoenix3D/PX2Extends/PX2Extends.vcxproj.filters
@@ -79,6 +79,15 @@
     <Filter Include="Edit\Factory">
       <UniqueIdentifier>{f9fb0ee3-ffee-4b88-b5c9-1cc8055e1486}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI\UIObj\Frame\Item">
+      <UniqueIdentifier>{b2b28ac7-086f-4c73-af09-d7a2f992463f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Edit\EditUI\Project">
+      <UniqueIdentifier>{402001c9-722e-439e-9889-33ec9707eb8f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Edit\EditUI\Res">
+      <UniqueIdentifier>{79729d49-7b1c-49af-8f56-05b9168bb5b4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppFrame\PX2AppFramePre.hpp">
@@ -403,9 +412,6 @@
     <ClInclude Include="UI\PX2UIText.hpp">
       <Filter>UI\UIObj\Text</Filter>
     </ClInclude>
-    <ClInclude Include="UI\PX2UICallback.hpp">
-      <Filter>UI\UIObj\PicBox</Filter>
-    </ClInclude>
     <ClInclude Include="UI\PX2UIPicBox.hpp">
       <Filter>UI\UIObj\PicBox</Filter>
     </ClInclude>
@@ -438,12 +444,6 @@
     </ClInclude>
     <ClInclude Include="UI\PX2UIAuiBlockFrame.hpp">
       <Filter>UI\UIObj\Frame\Aui</Filter>
-    </ClInclude>
-    <ClInclude Include="UI\PX2UIItem.hpp">
-      <Filter>UI\UIObj\Frame\Aui</Filter>
-    </ClInclude>
-    <ClInclude Include="Edit\PX2EU_ProjectFrame.hpp">
-      <Filter>Edit\EditUI</Filter>
     </ClInclude>
     <ClInclude Include="Edit\PX2Brush.hpp">
       <Filter>Edit\Brush</Filter>
@@ -513,6 +513,33 @@
     </ClInclude>
     <ClInclude Include="Edit\PX2EU_InspectorFrame.hpp">
       <Filter>Edit\EditUI</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\PX2UIItem.hpp">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\PX2UITree.hpp">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Edit\PX2EU_ConsoleFrame.hpp">
+      <Filter>Edit\EditUI</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\PX2UIList.hpp">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="Edit\PX2EU_ProjectFrame.hpp">
+      <Filter>Edit\EditUI\Project</Filter>
+    </ClInclude>
+    <ClInclude Include="Edit\PX2EU_ProjectTree.hpp">
+      <Filter>Edit\EditUI\Project</Filter>
+    </ClInclude>
+    <ClInclude Include="UI\PX2UIAuiManager.hpp">
+      <Filter>UI\UIObj\Frame\Aui</Filter>
+    </ClInclude>
+    <ClInclude Include="Edit\PX2EU_ResFrame.hpp">
+      <Filter>Edit\EditUI\Res</Filter>
+    </ClInclude>
+    <ClInclude Include="Edit\PX2EU_ResTree.hpp">
+      <Filter>Edit\EditUI\Res</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -837,12 +864,6 @@
     <ClCompile Include="UI\PX2UIAuiBlockFrame.cpp">
       <Filter>UI\UIObj\Frame\Aui</Filter>
     </ClCompile>
-    <ClCompile Include="UI\PX2UIItem.cpp">
-      <Filter>UI\UIObj\Frame\Aui</Filter>
-    </ClCompile>
-    <ClCompile Include="Edit\PX2EU_ProjectFrame.cpp">
-      <Filter>Edit\EditUI</Filter>
-    </ClCompile>
     <ClCompile Include="Edit\PX2Brush.cpp">
       <Filter>Edit\Brush</Filter>
     </ClCompile>
@@ -911,6 +932,33 @@
     </ClCompile>
     <ClCompile Include="Edit\PX2EU_InspectorFrame.cpp">
       <Filter>Edit\EditUI</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\PX2UIItem.cpp">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\PX2UITree.cpp">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="Edit\PX2EU_ConsoleFrame.cpp">
+      <Filter>Edit\EditUI</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\PX2UIList.cpp">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="Edit\PX2EU_ProjectFrame.cpp">
+      <Filter>Edit\EditUI\Project</Filter>
+    </ClCompile>
+    <ClCompile Include="Edit\PX2EU_ProjectTree.cpp">
+      <Filter>Edit\EditUI\Project</Filter>
+    </ClCompile>
+    <ClCompile Include="UI\PX2UIAuiManager.cpp">
+      <Filter>UI\UIObj\Frame\Aui</Filter>
+    </ClCompile>
+    <ClCompile Include="Edit\PX2EU_ResFrame.cpp">
+      <Filter>Edit\EditUI\Res</Filter>
+    </ClCompile>
+    <ClCompile Include="Edit\PX2EU_ResTree.cpp">
+      <Filter>Edit\EditUI\Res</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1119,6 +1167,15 @@
       <Filter>UI\UIObj\Frame\Aui</Filter>
     </None>
     <None Include="UI\PX2UIItem.inl">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </None>
+    <None Include="UI\PX2UITree.inl">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </None>
+    <None Include="UI\PX2UIList.inl">
+      <Filter>UI\UIObj\Frame\Item</Filter>
+    </None>
+    <None Include="UI\PX2UIAuiManager.inl">
       <Filter>UI\UIObj\Frame\Aui</Filter>
     </None>
   </ItemGroup>
